# ai-videos-faceless

./: .gitignore  README.md  install.sh  narration_generator.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: discipline_perception.txt
scripts/: check.sh  lint.sh
