[project]
name = "narration-image-generator"
version = "1.0.0"
description = "A production-grade CLI tool that automatically generates high-resolution images for narration scripts using the Pexels API and OpenAI"
authors = [{name = "Narration Image Generator", email = "noreply@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8.1"
keywords = ["cli", "narration", "images", "pexels", "openai", "capcut"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "click>=8.1.7",
    "nltk>=3.8.1",
    "spacy>=3.7.0",
    "Pillow>=10.0.0",
    "pathvalidate>=3.2.0",
    "colorama>=0.4.6",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
narration-gen = "narration_generator:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.urls]
Repository = "https://github.com/example/narration-image-generator"
Documentation = "https://github.com/example/narration-image-generator#readme"
Changelog = "https://github.com/example/narration-image-generator/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true