[project]
name = "narration-image-generator"
version = "1.0.0"
description = "A production-grade CLI tool that automatically generates high-resolution images for narration scripts using the Pexels API and OpenAI"
authors = [{name = "Narration Image Generator", email = "noreply@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8.1"
keywords = ["cli", "narration", "images", "pexels", "openai", "capcut"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "click>=8.1.7",
    "nltk>=3.8.1",
    "spacy>=3.7.0",
    "Pillow>=10.0.0",
    "pathvalidate>=3.2.0",
    "colorama>=0.4.6",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
narration-gen = "narration_generator:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.urls]
Repository = "https://github.com/example/narration-image-generator"
Documentation = "https://github.com/example/narration-image-generator#readme"
Changelog = "https://github.com/example/narration-image-generator/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = [
    "E4",      # pycodestyle errors
    "E7",      # pycodestyle errors
    "E9",      # pycodestyle errors
    "F",       # Pyflakes
    "W",       # pycodestyle warnings
    "I",       # isort
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "SIM",     # flake8-simplify
    "PIE",     # flake8-pie
    "RET",     # flake8-return
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Do not perform function calls in argument defaults
    "C901",    # Function is too complex
    "N812",    # Lowercase imported as non-lowercase
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
